@@ -17,10 +17,10 @@
     <pre>
 \documentclass{article}
 \usepackage[utf8]{inputenc}
-\usepackage[active,displaymath,textmath]{preview}
+\usepackage[active,displaymath,textmath]{preview} % DO NOT DELETE - this is required for baseline alignment
 \pagestyle{empty}
 \begin{document}
-__REPLACE_ME__ %this is where your LaTeX expression goes
+__REPLACE_ME__ % this is where your LaTeX expression goes
 \end{document}
     </pre>
    <p>
@@ -47,14 +47,14 @@ __REPLACE_ME__ %this is where your LaTeX expression goes
     <pre>
 \documentclass{article}
 \usepackage[utf8]{inputenc}
-\usepackage[active,displaymath,textmath]{preview}
+\usepackage[active,displaymath,textmath]{preview} % DO NOT DELETE - this is required for baseline alignment
 \usepackage{amsmath,amssymb,amsopn}
 \usepackage{mathrsfs}
 \usepackage{palatino}
 \usepackage{mathpazo}
 \pagestyle{empty}
 \begin{document}
-__REPLACE_ME__ %this is where your LaTeX expression goes
+__REPLACE_ME__ % this is where your LaTeX expression goes
 \end{document}
     </pre>
  
