@@ -77,6 +77,26 @@ var tblatex = {
     return latex_nodes;
   }
 
+  /* Check if the LaTeX expression (that is, the whole file) contains the required packages.
+   * At the moment, it checks for the minimum of
+   * - \usepackage[active]{preview}
+   * which must not be commented out.
+   *
+   * The 'preview' package is needed for the baseline alignment with the surrounding text
+   * introduced in v0.7.x.
+   *
+   * If the package(s) cannot be found, an alert message window is shown, informing the user.
+   */
+  function check_required_packages(latex_expr) {
+    var re = /^[^%]*\\usepackage\[(.*,\s*)?active(,.*)?\]{(.*,\s*)?preview(,.*)?}/;
+    var package_match = latex_expr.match(re);
+    if (package_match)
+        return "";
+    else
+        alert("LatexIt! Error\n\nThe package 'preview' cannot be found in the LaTeX file.\nThe inclusion of the LaTeX package 'preview' (with option 'active') is mandatory for the generated pictures to be aligned with the surrounding text!\n\nSolution:\n\tInsert a line with\n\t\t\\usepackage[active,displaymath,textmath]{preview}\n\tin the preamble of your LaTeX template or complex expression.");
+        return "!!! The package 'preview' cannot be found in the LaTeX file.\n";
+  }
+
   /* This *has* to be global. If image a.png is inserted, then modified, then
    * inserted again in the same mail, the OLD a.png is displayed because of some
    * cache which I haven't found a way to invalidate yet. */
@@ -109,14 +129,17 @@ var tblatex = {
         return [0, g_image_cache[latex_expr+font_px], 0, log+"Image was already generated\n"];
       }
 
+      log += check_required_packages(latex_expr);
+
       var init_file = function(path) {
         var f = Components.classes["@mozilla.org/file/local;1"].createInstance(Components.interfaces.nsIFile);
         try {
           f.initWithPath(path);
           return f;
         } catch (e) {
+          alert("LatexIt! Error\n\nThis path is malformed:\n\t"+path+"\n\nSolution:\n\tSet the path properly in the add-on's options dialog (☰>Add-ons>Latex It!)");
           log += "!!! This path is malformed: "+path+".\n"+
-            "Possible reasons include: you didn't setup the paths properly in the addon's options.\n";
+            "Possible reasons include: you didn't setup the paths properly in the add-on's options.\n";
           return {
             exists: function () { return false; }
           };
@@ -130,12 +153,14 @@ var tblatex = {
 
       var latex_bin = init_file(prefs.getCharPref("latex_path"));
       if (!latex_bin.exists()) {
-        log += "!!! Wrong path for latex bin. Please set the right path in the options dialog first.\n";
+        alert("LatexIt! Error\n\nThe 'latex' executable cannot be found.\n\nSolution:\n\tSet the right path in the add-on's options dialog (☰>Add-ons>Latex It!)");
+        log += "!!! Wrong path for 'latex' executable. Please set the right path in the options dialog first.\n";
         return [2, "", 0, log];
       }
       var dvipng_bin = init_file(prefs.getCharPref("dvipng_path"));
       if (!dvipng_bin.exists()) {
-        log += "!!! Wrong path for dvipng bin. Please set the right path in the options dialog first.\n";
+        alert("LatexIt! Error\n\nThe 'dvipng' executable cannot be found.\n\nSolution:\n\tSet the right path in the add-on's options dialog (☰>Add-ons>Latex It!)");
+        log += "!!! Wrong path for 'dvipng' executable. Please set the right path in the options dialog first.\n";
         return [2, "", 0, log];
       }
       // Since version 0.7.1 we support the alignment of the inserted pictures
@@ -226,6 +251,7 @@ var tblatex = {
       var dvi_file = init_file(temp_dir);
       dvi_file.append(temp_file_noext+".dvi");
       if (!dvi_file.exists()) {
+        alert("LatexIt! Error\n\nLaTeX did not output a .dvi file.\n\nSolution:\n\tWe left the .tex file there:\n\t\t"+temp_file.path+"\n\tTry to run 'latex' on it by yourself...");
         log += "!!! LaTeX did not output a .dvi file, something definitely went wrong. Aborting.\n";
         return [2, "", 0, log];
       }
@@ -280,6 +306,7 @@ var tblatex = {
       if (debug)
         log += "I ran "+shell_bin.path+" -c '"+dvipng_args.join(" ")+"'\n";
       if (shell_process.exitValue) {
+        alert("LatexIt! Error\n\nWhen converting the .dvi to a .png bitmap, 'dvipng' failed (Error code: "+shell_process.exitValue+")\n\nSolution:\n\tWe left the .dvi file there:\n\t\t"+temp_file.path+"\n\tTry to run 'dvipng --depth' on it by yourself...");
         log += "!!! dvipng failed with error code "+shell_process.exitValue+". Aborting.\n";
         return [2, "", 0, log];
       }
@@ -300,7 +327,7 @@ var tblatex = {
 
       // Read the depth (distance between base of image and baseline) from the depth file
       if (!depth_file.exists()) {
-        log += "dvipng did not put out a depth file. Continuing without alignment.\n";
+        log += "dvipng did not output a depth file. Continuing without alignment.\n";
         return [st, png_file.path, 0, log];
       }
 
@@ -339,10 +366,11 @@ var tblatex = {
 
       return [st, png_file.path, depth, log];
     } catch (e) {
+      alert("LatexIt! Error\n\nSevere error. Missing package?\n\nSolution:\n\tWe left the .tex file there:\n\t\t"+temp_file.path+"\n\tTry to run 'latex' and 'dvipng --depth' on it by yourself...");
       dump(e+"\n");
       dump(e.stack+"\n");
       log += "!!! Severe error. Missing package?\n";
-      log += "We left the .tex file there: "+temp_file.path+", try to run latex on it by yourself...\n";
+      log += "We left the .tex file there: "+temp_file.path+", try to run 'latex' and 'dvipng --depth' on it by yourself...\n";
       return [2, "", 0, log];
     }
   }
@@ -422,7 +450,7 @@ var tblatex = {
     var write_log = function(str) { if (!write_log_func) write_log_func = open_log(); return write_log_func(str); };
     var editor = GetCurrentEditor();
     if (!nodes.length && !silent)
-      write_log("No LaTeX $$ expressions found\n");
+      write_log("No unconverted LaTeX $$ expression was found\n");
     for (var i = 0; i < nodes.length; ++i) (function (i) { /* Need a real scope here and there is no let-binding available in Thunderbird 2 */
       var elt = nodes[i];
       if (!silent)
