@@ -1,6 +1,10 @@
 --vX.Y.Z
 
 - Fixed baseline alignment on multiple runs (Bug #64).
+- Check for inclusion of "preview" package in LaTeX template.
+- Added a do-not-delete note to the template regarding "\usepackage[active]{preview}".
+- Added more aggressive error messages for severe errors.
+- Tiny improvements in error messages.
 - Added option to keep the temporary files, even after successful LaTeX runs.
 
 --v0.7.2
